--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -121,6 +121,7 @@
      <Compile Include="Assets\Scripts\Games\Shoot\PathTracker.cs" />
      <Compile Include="Assets\Scripts\Games\Shoot\PowerUpResponse.cs" />
      <Compile Include="Assets\Scripts\Games\Shoot\PowerUpSpawn.cs" />
+     <Compile Include="Assets\Scripts\Games\Shoot\ShootObjectResponse.cs" />
      <Compile Include="Assets\Scripts\Games\Shoot\ZombieEnemyAttack.cs" />
      <Compile Include="Assets\Scripts\Games\SkyJumper\AddRandomPiece.cs" />
      <Compile Include="Assets\Scripts\Games\SkyJumper\GroundTextMover.cs" />
