--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -120,7 +120,6 @@
      <Compile Include="Assets\Scripts\Games\Shoot\LookShoot.cs" />
      <Compile Include="Assets\Scripts\Games\Shoot\NavigationController.cs" />
      <Compile Include="Assets\Scripts\Games\Shoot\PathTracker.cs" />
-     <Compile Include="Assets\Scripts\Games\Shoot\PowerUpResponse.cs" />
      <Compile Include="Assets\Scripts\Games\Shoot\PowerUpSpawn.cs" />
      <Compile Include="Assets\Scripts\Games\Shoot\ShootObjectResponse.cs" />
      <Compile Include="Assets\Scripts\Games\Shoot\ZombieEnemyAttack.cs" />
@@ -133,6 +132,7 @@
      <Compile Include="Assets\Scripts\Games\Wack\MoleType.cs" />
      <Compile Include="Assets\Scripts\Games\Wack\WackGameManager.cs" />
      <Compile Include="Assets\Scripts\Games\Wack\WackLookClick.cs" />
+     <Compile Include="Assets\Scripts\Games\Wack\WackSpawnPowerUps.cs" />
      <Compile Include="Assets\Scripts\Menu Scripts\BaseSoundController.cs" />
      <Compile Include="Assets\Scripts\Menu Scripts\ButtonClickLook.cs" />
      <Compile Include="Assets\Scripts\Menu Scripts\CountingDownS.cs" />
@@ -150,6 +150,8 @@
      <Compile Include="Assets\Scripts\Menu Scripts\SAssessment.cs" />
      <Compile Include="Assets\Scripts\Menu Scripts\SetGameScore.cs" />
      <Compile Include="Assets\Scripts\SharedScripts\Extensions.cs" />
+     <Compile Include="Assets\Scripts\SharedScripts\Flock.cs" />
+     <Compile Include="Assets\Scripts\SharedScripts\FlockController.cs" />
      <Compile Include="Assets\Scripts\SharedScripts\GameController.cs" />
      <Compile Include="Assets\Scripts\SharedScripts\GameTimer.cs" />
      <Compile Include="Assets\Scripts\SharedScripts\HitEffectDelete.cs" />
@@ -158,7 +160,9 @@
      <Compile Include="Assets\Scripts\SharedScripts\ItemRotate.cs" />
      <Compile Include="Assets\Scripts\SharedScripts\NewWave.cs" />
      <Compile Include="Assets\Scripts\SharedScripts\PlayerManager.cs" />
+     <Compile Include="Assets\Scripts\SharedScripts\PowerUpResponse.cs" />
      <Compile Include="Assets\Scripts\SharedScripts\SceneController.cs" />
+     <Compile Include="Assets\Scripts\SharedScripts\TargetMovement.cs" />
      <Compile Include="Assets\Scripts\SharedScripts\WaveController.cs" />
      <Compile Include="Assets\Scripts\TESTING.cs" />
      <Compile Include="Assets\TagFrenzy\Scripts\Core\EditorTag.cs" />
