--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -129,6 +129,7 @@
      <Compile Include="Assets\Scripts\Games\SkyJumper\Movement.cs" />
      <Compile Include="Assets\Scripts\Games\SkyJumper\ObjExitTrigger.cs" />
      <Compile Include="Assets\Scripts\Games\SkyJumper\SkyJGameConroller.cs" />
+     <Compile Include="Assets\Scripts\Games\TriggerGameSelection.cs" />
      <Compile Include="Assets\Scripts\Games\Wack\MoleType.cs" />
      <Compile Include="Assets\Scripts\Games\Wack\WackGameManager.cs" />
      <Compile Include="Assets\Scripts\Games\Wack\WackLookClick.cs" />
@@ -149,6 +150,7 @@
      <Compile Include="Assets\Scripts\Menu Scripts\PaintPopUp.cs" />
      <Compile Include="Assets\Scripts\Menu Scripts\SAssessment.cs" />
      <Compile Include="Assets\Scripts\Menu Scripts\SetGameScore.cs" />
+     <Compile Include="Assets\Scripts\SharedScripts\EnableOrDisableTrigger.cs" />
      <Compile Include="Assets\Scripts\SharedScripts\Extensions.cs" />
      <Compile Include="Assets\Scripts\SharedScripts\Flock.cs" />
      <Compile Include="Assets\Scripts\SharedScripts\FlockController.cs" />
