--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -134,6 +134,8 @@
      <Compile Include="Assets\Scripts\Games\Wack\WackGameManager.cs" />
      <Compile Include="Assets\Scripts\Games\Wack\WackLookClick.cs" />
      <Compile Include="Assets\Scripts\Games\Wack\WackSpawnPowerUps.cs" />
+     <Compile Include="Assets\Scripts\Intro\DogInteraction.cs" />
+     <Compile Include="Assets\Scripts\Intro\InteractionBehavior.cs" />
      <Compile Include="Assets\Scripts\Menu Scripts\BaseSoundController.cs" />
      <Compile Include="Assets\Scripts\Menu Scripts\ButtonClickLook.cs" />
      <Compile Include="Assets\Scripts\Menu Scripts\CountingDownS.cs" />
