--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -135,15 +135,18 @@
      <Compile Include="Assets\Scripts\Games\Wack\WackLookClick.cs" />
      <Compile Include="Assets\Scripts\Games\Wack\WackSpawnPowerUps.cs" />
      <Compile Include="Assets\Scripts\Intro\DogInteraction.cs" />
+     <Compile Include="Assets\Scripts\Intro\FeetFollowPlayer.cs" />
      <Compile Include="Assets\Scripts\Intro\InteractionBehavior.cs" />
+     <Compile Include="Assets\Scripts\Intro\MirrorInteraction.cs" />
+     <Compile Include="Assets\Scripts\Intro\RopeManager.cs" />
      <Compile Include="Assets\Scripts\Menu Scripts\BaseSoundController.cs" />
      <Compile Include="Assets\Scripts\Menu Scripts\ButtonClickLook.cs" />
      <Compile Include="Assets\Scripts\Menu Scripts\CountingDownS.cs" />
      <Compile Include="Assets\Scripts\Menu Scripts\CursorPositioner.cs" />
+     <Compile Include="Assets\Scripts\Menu Scripts\DataManager.cs" />
      <Compile Include="Assets\Scripts\Menu Scripts\DestressPopUp.cs" />
      <Compile Include="Assets\Scripts\Menu Scripts\FolowAllong.cs" />
      <Compile Include="Assets\Scripts\Menu Scripts\GameSuggest.cs" />
-     <Compile Include="Assets\Scripts\Menu Scripts\HighScoreManager.cs" />
      <Compile Include="Assets\Scripts\Menu Scripts\LockManager.cs" />
      <Compile Include="Assets\Scripts\Menu Scripts\MagnetSensor.cs" />
      <Compile Include="Assets\Scripts\Menu Scripts\MoveAroundChoice.cs" />
