--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -134,10 +134,12 @@
      <Compile Include="Assets\Scripts\Games\Wack\WackGameManager.cs" />
      <Compile Include="Assets\Scripts\Games\Wack\WackLookClick.cs" />
      <Compile Include="Assets\Scripts\Games\Wack\WackSpawnPowerUps.cs" />
+     <Compile Include="Assets\Scripts\Intro\BicycleInteraction.cs" />
      <Compile Include="Assets\Scripts\Intro\DogInteraction.cs" />
      <Compile Include="Assets\Scripts\Intro\FeetFollowPlayer.cs" />
+     <Compile Include="Assets\Scripts\Intro\GeneralInteraction.cs" />
      <Compile Include="Assets\Scripts\Intro\InteractionBehavior.cs" />
-     <Compile Include="Assets\Scripts\Intro\MirrorInteraction.cs" />
+     <Compile Include="Assets\Scripts\Intro\LookInteraction.cs" />
      <Compile Include="Assets\Scripts\Intro\RopeManager.cs" />
      <Compile Include="Assets\Scripts\Menu Scripts\BaseSoundController.cs" />
      <Compile Include="Assets\Scripts\Menu Scripts\ButtonClickLook.cs" />
@@ -188,6 +190,7 @@
      <None Include="Assets\TagFrenzy\Resources\Tags.xml" />
      <None Include="Assets\Plugins\Android\AndroidManifest.xml" />
      <None Include="Assets\Text\Menu\Anger_CR.txt" />
+     <None Include="Assets\Shaders\OnTop3DText.shader" />
      <None Include="Assets\GoogleVR\Resources\UI\GvrReticleShader.shader" />
      <None Include="Assets\Text\Menu\Disappointed_CR.txt" />
      <None Include="Assets\GoogleVR\Resources\SolidColor.shader" />
