--- a/Assembly-CSharp-Editor.csproj
+++ b/Assembly-CSharp-Editor.csproj
@@ -64,6 +64,7 @@
      <None Include="Assets\TagFrenzy\Resources\Tags.xml" />
      <None Include="Assets\Plugins\Android\AndroidManifest.xml" />
      <None Include="Assets\Text\Menu\Anger_CR.txt" />
+     <None Include="Assets\Shaders\OnTop3DText.shader" />
      <None Include="Assets\GoogleVR\Resources\UI\GvrReticleShader.shader" />
      <None Include="Assets\Text\Menu\Disappointed_CR.txt" />
      <None Include="Assets\GoogleVR\Resources\SolidColor.shader" />
