--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -135,6 +135,7 @@
      <Compile Include="Assets\Scripts\Games\Wack\WackLookClick.cs" />
      <Compile Include="Assets\Scripts\Games\Wack\WackSpawnPowerUps.cs" />
      <Compile Include="Assets\Scripts\Intro\BicycleInteraction.cs" />
+     <Compile Include="Assets\Scripts\Intro\CollectTaskInteraction.cs" />
      <Compile Include="Assets\Scripts\Intro\DogInteraction.cs" />
      <Compile Include="Assets\Scripts\Intro\FeetFollowPlayer.cs" />
      <Compile Include="Assets\Scripts\Intro\GeneralInteraction.cs" />
