--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -46,6 +46,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\Animations\Intro\AnimationScripts\RandomLook_AnimationBehavior.cs" />
      <Compile Include="Assets\Delete\CreateNewGround.cs" />
      <Compile Include="Assets\GoogleVR\DemoScenes\ControllerDemo\ControllerDebugInfo.cs" />
      <Compile Include="Assets\GoogleVR\DemoScenes\ControllerDemo\ControllerDemoManager.cs" />
@@ -189,6 +190,7 @@
      <None Include="Assets\Text\Menu\Sad_CR.txt" />
      <None Include="Assets\GoogleVR\Resources\UnlitTexture.shader" />
      <None Include="Assets\Text\Menu\Anxiety_CR.txt" />
+     <None Include="Assets\Shaders\Waves.shader" />
      <None Include="Assets\TagFrenzy\Resources\Tags.xml" />
      <None Include="Assets\Plugins\Android\AndroidManifest.xml" />
      <None Include="Assets\Text\Menu\Anger_CR.txt" />
