--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -136,13 +136,15 @@
      <Compile Include="Assets\Scripts\Games\Wack\WackLookClick.cs" />
      <Compile Include="Assets\Scripts\Games\Wack\WackSpawnPowerUps.cs" />
      <Compile Include="Assets\Scripts\Intro\BicycleInteraction.cs" />
-     <Compile Include="Assets\Scripts\Intro\CaveInteraction.cs" />
      <Compile Include="Assets\Scripts\Intro\CollectTaskInteraction.cs" />
+     <Compile Include="Assets\Scripts\Intro\CowMove.cs" />
      <Compile Include="Assets\Scripts\Intro\DogInteraction.cs" />
      <Compile Include="Assets\Scripts\Intro\FeetFollowPlayer.cs" />
      <Compile Include="Assets\Scripts\Intro\GeneralInteraction.cs" />
      <Compile Include="Assets\Scripts\Intro\InteractionBehavior.cs" />
      <Compile Include="Assets\Scripts\Intro\LookInteraction.cs" />
+     <Compile Include="Assets\Scripts\Intro\Mountain_Cave_TaskCollection.cs" />
+     <Compile Include="Assets\Scripts\Intro\Mountain_Glasses_TaskCollection.cs" />
      <Compile Include="Assets\Scripts\Intro\RopeManager.cs" />
      <Compile Include="Assets\Scripts\Menu Scripts\BaseSoundController.cs" />
      <Compile Include="Assets\Scripts\Menu Scripts\ButtonClickLook.cs" />
@@ -160,6 +162,7 @@
      <Compile Include="Assets\Scripts\Menu Scripts\PaintPopUp.cs" />
      <Compile Include="Assets\Scripts\Menu Scripts\SAssessment.cs" />
      <Compile Include="Assets\Scripts\Menu Scripts\SetGameScore.cs" />
+     <Compile Include="Assets\Scripts\RandomMoveAnimations.cs" />
      <Compile Include="Assets\Scripts\SharedScripts\EnableOrDisableTrigger.cs" />
      <Compile Include="Assets\Scripts\SharedScripts\Extensions.cs" />
      <Compile Include="Assets\Scripts\SharedScripts\Flock.cs" />
