--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -6,7 +6,7 @@
     <ProductVersion>10.0.20506</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <RootNamespace></RootNamespace>
-    <ProjectGuid>{EDDAA731-D853-AB13-1E3B-C2599588DAD3}</ProjectGuid>
+    <ProjectGuid>{2F6D047C-5EB6-2C94-0D85-CD1C30CDB267}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <AssemblyName>Assembly-CSharp</AssemblyName>
@@ -137,6 +137,7 @@
      <Compile Include="Assets\Scripts\Games\Wack\WackSpawnPowerUps.cs" />
      <Compile Include="Assets\Scripts\Intro\BicycleInteraction.cs" />
      <Compile Include="Assets\Scripts\Intro\CollectTaskInteraction.cs" />
+     <Compile Include="Assets\Scripts\Intro\CowHomeTrigger.cs" />
      <Compile Include="Assets\Scripts\Intro\CowMove.cs" />
      <Compile Include="Assets\Scripts\Intro\DogInteraction.cs" />
      <Compile Include="Assets\Scripts\Intro\FeetFollowPlayer.cs" />
@@ -224,7 +225,7 @@
  <HintPath>/opt/Unity/Editor/Data/UnityExtensions/Unity/UnityVR/RuntimeEditor/UnityEngine.VR.dll</HintPath>
  </Reference>
  <Reference Include="Google.ProtocolBuffers">
- <HintPath>/home/user/Desktop/Destressor/Assets/Plugins/Google.ProtocolBuffers.dll</HintPath>
+ <HintPath>/home/user/destressor1/Assets/Plugins/Google.ProtocolBuffers.dll</HintPath>
  </Reference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
