--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -88,7 +88,6 @@
      <Compile Include="Assets\GoogleVR\Scripts\VRDevices\EditorDevice.cs" />
      <Compile Include="Assets\GoogleVR\Scripts\VRDevices\GvrDevice.cs" />
      <Compile Include="Assets\GoogleVR\Scripts\VRDevices\iOSDevice.cs" />
-     <Compile Include="Assets\Scripts\Games\Collections\CollectorLookWalk.cs" />
      <Compile Include="Assets\Scripts\Games\Collections\Enemy.cs" />
      <Compile Include="Assets\Scripts\Games\Collections\EnemyManager.cs" />
      <Compile Include="Assets\Scripts\Games\Collections\SpawnCollections.cs" />
@@ -137,6 +136,7 @@
      <Compile Include="Assets\Scripts\Games\Wack\WackSpawnPowerUps.cs" />
      <Compile Include="Assets\Scripts\Intro\BicycleInteraction.cs" />
      <Compile Include="Assets\Scripts\Intro\CollectTaskInteraction.cs" />
+     <Compile Include="Assets\Scripts\Intro\CowCollectionTask.cs" />
      <Compile Include="Assets\Scripts\Intro\CowHomeTrigger.cs" />
      <Compile Include="Assets\Scripts\Intro\CowMove.cs" />
      <Compile Include="Assets\Scripts\Intro\DogInteraction.cs" />
@@ -175,6 +175,7 @@
      <Compile Include="Assets\Scripts\SharedScripts\ItemResponse.cs" />
      <Compile Include="Assets\Scripts\SharedScripts\ItemRotate.cs" />
      <Compile Include="Assets\Scripts\SharedScripts\NewWave.cs" />
+     <Compile Include="Assets\Scripts\SharedScripts\PlayerLookMove.cs" />
      <Compile Include="Assets\Scripts\SharedScripts\PlayerManager.cs" />
      <Compile Include="Assets\Scripts\SharedScripts\PowerUpResponse.cs" />
      <Compile Include="Assets\Scripts\SharedScripts\SceneController.cs" />
