--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -146,6 +146,7 @@
      <Compile Include="Assets\Scripts\Intro\LookInteraction.cs" />
      <Compile Include="Assets\Scripts\Intro\Mountain_Cave_TaskCollection.cs" />
      <Compile Include="Assets\Scripts\Intro\Mountain_Glasses_TaskCollection.cs" />
+     <Compile Include="Assets\Scripts\Intro\QuestAsess.cs" />
      <Compile Include="Assets\Scripts\Intro\RopeManager.cs" />
      <Compile Include="Assets\Scripts\Menu Scripts\BaseSoundController.cs" />
      <Compile Include="Assets\Scripts\Menu Scripts\ButtonClickLook.cs" />
