--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -146,7 +146,7 @@
      <Compile Include="Assets\Scripts\Intro\LookInteraction.cs" />
      <Compile Include="Assets\Scripts\Intro\Mountain_Cave_TaskCollection.cs" />
      <Compile Include="Assets\Scripts\Intro\Mountain_Glasses_TaskCollection.cs" />
-     <Compile Include="Assets\Scripts\Intro\QuestAsess.cs" />
+     <Compile Include="Assets\Scripts\Intro\QuestAssess.cs" />
      <Compile Include="Assets\Scripts\Intro\RopeManager.cs" />
      <Compile Include="Assets\Scripts\Menu Scripts\BaseSoundController.cs" />
      <Compile Include="Assets\Scripts\Menu Scripts\ButtonClickLook.cs" />
@@ -176,6 +176,7 @@
      <Compile Include="Assets\Scripts\SharedScripts\ItemResponse.cs" />
      <Compile Include="Assets\Scripts\SharedScripts\ItemRotate.cs" />
      <Compile Include="Assets\Scripts\SharedScripts\NewWave.cs" />
+     <Compile Include="Assets\Scripts\SharedScripts\ParticleEffectReplay.cs" />
      <Compile Include="Assets\Scripts\SharedScripts\PlayerLookMove.cs" />
      <Compile Include="Assets\Scripts\SharedScripts\PlayerManager.cs" />
      <Compile Include="Assets\Scripts\SharedScripts\PowerUpResponse.cs" />
