--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -226,7 +226,6 @@
      <Compile Include="Assets\Scripts\Menu Scripts\CountingDownS.cs" />
      <Compile Include="Assets\Scripts\Menu Scripts\CursorPositioner.cs" />
      <Compile Include="Assets\Scripts\Menu Scripts\DataManager.cs" />
-     <Compile Include="Assets\Scripts\Menu Scripts\DestressPopUp.cs" />
      <Compile Include="Assets\Scripts\Menu Scripts\FolowAllong.cs" />
      <Compile Include="Assets\Scripts\Menu Scripts\GameSuggest.cs" />
      <Compile Include="Assets\Scripts\Menu Scripts\LockManager.cs" />
@@ -234,6 +233,7 @@
      <Compile Include="Assets\Scripts\Menu Scripts\MoveAroundChoice.cs" />
      <Compile Include="Assets\Scripts\Menu Scripts\MusicController.cs" />
      <Compile Include="Assets\Scripts\Menu Scripts\MusicTrackName.cs" />
+     <Compile Include="Assets\Scripts\Menu Scripts\OrientationAdjustment.cs" />
      <Compile Include="Assets\Scripts\Menu Scripts\PaintPopUp.cs" />
      <Compile Include="Assets\Scripts\Menu Scripts\SAssessment.cs" />
      <Compile Include="Assets\Scripts\Menu Scripts\SetGameScore.cs" />
