--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -46,6 +46,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\Animations\Intro\AnimationScripts\NakedManAnimBehavior.cs" />
      <Compile Include="Assets\Animations\Intro\AnimationScripts\RandomLook_AnimationBehavior.cs" />
      <Compile Include="Assets\Delete\CreateNewGround.cs" />
      <Compile Include="Assets\GoogleVR\Demos\Scripts\DemoInputManager.cs" />
@@ -156,7 +157,6 @@
      <Compile Include="Assets\GoogleVR\Scripts\Utilities\GvrMathHelpers.cs" />
      <Compile Include="Assets\GoogleVR\Scripts\Utilities\GvrUIHelpers.cs" />
      <Compile Include="Assets\GoogleVR\Scripts\Video\GvrVideoPlayerTexture.cs" />
-     <Compile Include="Assets\NakedManAnimBehavior.cs" />
      <Compile Include="Assets\Scripts\Games\Collections\Enemy.cs" />
      <Compile Include="Assets\Scripts\Games\Collections\EnemyManager.cs" />
      <Compile Include="Assets\Scripts\Games\Collections\SpawnCollections.cs" />
@@ -203,6 +203,7 @@
      <Compile Include="Assets\Scripts\Games\Wack\WackGameManager.cs" />
      <Compile Include="Assets\Scripts\Games\Wack\WackLookClick.cs" />
      <Compile Include="Assets\Scripts\Games\Wack\WackSpawnPowerUps.cs" />
+     <Compile Include="Assets\Scripts\Intro\AddForceToFallingObjects.cs" />
      <Compile Include="Assets\Scripts\Intro\AwakeAnimation.cs" />
      <Compile Include="Assets\Scripts\Intro\BicycleInteraction.cs" />
      <Compile Include="Assets\Scripts\Intro\CollectTaskInteraction.cs" />
