--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -157,6 +157,7 @@
      <Compile Include="Assets\GoogleVR\Scripts\Utilities\GvrMathHelpers.cs" />
      <Compile Include="Assets\GoogleVR\Scripts\Utilities\GvrUIHelpers.cs" />
      <Compile Include="Assets\GoogleVR\Scripts\Video\GvrVideoPlayerTexture.cs" />
+     <Compile Include="Assets\LookAtAnimBehavior.cs" />
      <Compile Include="Assets\Scripts\Games\Collections\Enemy.cs" />
      <Compile Include="Assets\Scripts\Games\Collections\EnemyManager.cs" />
      <Compile Include="Assets\Scripts\Games\Collections\SpawnCollections.cs" />
@@ -218,6 +219,7 @@
      <Compile Include="Assets\Scripts\Intro\LookInteraction.cs" />
      <Compile Include="Assets\Scripts\Intro\Mountain_Cave_TaskCollection.cs" />
      <Compile Include="Assets\Scripts\Intro\Mountain_Glasses_TaskCollection.cs" />
+     <Compile Include="Assets\Scripts\Intro\Mountain_Injuredtask.cs" />
      <Compile Include="Assets\Scripts\Intro\Mountain_Rock_Collect.cs" />
      <Compile Include="Assets\Scripts\Intro\QuestAssess.cs" />
      <Compile Include="Assets\Scripts\Intro\RockHtSmaller.cs" />
@@ -254,6 +256,7 @@
      <Compile Include="Assets\Scripts\SharedScripts\PlayerLookMove.cs" />
      <Compile Include="Assets\Scripts\SharedScripts\PlayerManager.cs" />
      <Compile Include="Assets\Scripts\SharedScripts\PowerUpResponse.cs" />
+     <Compile Include="Assets\Scripts\SharedScripts\RandomiseAnimParameters.cs" />
      <Compile Include="Assets\Scripts\SharedScripts\SceneController.cs" />
      <Compile Include="Assets\Scripts\SharedScripts\TargetMovement.cs" />
      <Compile Include="Assets\Scripts\SharedScripts\WaveController.cs" />
