--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -221,6 +221,7 @@
      <Compile Include="Assets\Scripts\Intro\Mountain_Glasses_TaskCollection.cs" />
      <Compile Include="Assets\Scripts\Intro\Mountain_Injuredtask.cs" />
      <Compile Include="Assets\Scripts\Intro\Mountain_Rock_Collect.cs" />
+     <Compile Include="Assets\Scripts\Intro\Mountain_TicketTaskCollection.cs" />
      <Compile Include="Assets\Scripts\Intro\QuestAssess.cs" />
      <Compile Include="Assets\Scripts\Intro\RockHtSmaller.cs" />
      <Compile Include="Assets\Scripts\Intro\RopeManager.cs" />
