--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -225,6 +225,7 @@
      <Compile Include="Assets\Scripts\Intro\QuestAssess.cs" />
      <Compile Include="Assets\Scripts\Intro\RockHtSmaller.cs" />
      <Compile Include="Assets\Scripts\Intro\RopeManager.cs" />
+     <Compile Include="Assets\Scripts\Intro\UIStressGage.cs" />
      <Compile Include="Assets\Scripts\Menu Scripts\BaseSoundController.cs" />
      <Compile Include="Assets\Scripts\Menu Scripts\ButtonClickLook.cs" />
      <Compile Include="Assets\Scripts\Menu Scripts\CountingDownS.cs" />
