--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -217,6 +217,7 @@
      <Compile Include="Assets\Scripts\Intro\GeneralInteraction.cs" />
      <Compile Include="Assets\Scripts\Intro\InteractionBehavior.cs" />
      <Compile Include="Assets\Scripts\Intro\LookInteraction.cs" />
+     <Compile Include="Assets\Scripts\Intro\MenuArmFollow.cs" />
      <Compile Include="Assets\Scripts\Intro\Mountain_Cave_TaskCollection.cs" />
      <Compile Include="Assets\Scripts\Intro\Mountain_Glasses_TaskCollection.cs" />
      <Compile Include="Assets\Scripts\Intro\Mountain_Injuredtask.cs" />
