--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -54,6 +54,7 @@
      <Compile Include="Assets\Animations\Intro\AnimationScripts\NakedManAnimBehavior.cs" />
      <Compile Include="Assets\Animations\Intro\AnimationScripts\RandomLook_AnimationBehavior.cs" />
      <Compile Include="Assets\Delete\CreateNewGround.cs" />
+     <Compile Include="Assets\FollowCameraRotation.cs" />
      <Compile Include="Assets\GoogleVR\Demos\Scripts\DemoInputManager.cs" />
      <Compile Include="Assets\GoogleVR\Demos\Scripts\DemoSceneManager.cs" />
      <Compile Include="Assets\GoogleVR\Demos\Scripts\GVRDemo\GVRDemoManager.cs" />
@@ -304,6 +305,7 @@
      <None Include="Assets\GoogleVR\Shaders\GvrReticleShader.shader" />
      <None Include="Assets\Text\Menu\Disappointed_CR.txt" />
      <None Include="Assets\GoogleVR\Shaders\GvrUIOverlay.shader" />
+     <None Include="Assets\Shaders\MobileWater.shader" />
      <None Include="Assets\Plugins\Android\AndroidManifest-Cardboard.xml" />
      <None Include="Assets\Text\Menu\Worried_CR.txt" />
      <None Include="Assets\GoogleVR\Shaders\GvrUnityCompatibility.cginc" />
