--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -221,8 +221,9 @@
      <Compile Include="Assets\Scripts\Games\Hoops\BallManager.cs" />
      <Compile Include="Assets\Scripts\Games\Hoops\HoopSpawn.cs" />
      <Compile Include="Assets\Scripts\Games\Hoops\LookHoop.cs" />
-     <Compile Include="Assets\Scripts\Games\Hoops\LOOKHOOPTEST.cs" />
+     <Compile Include="Assets\Scripts\Games\Hoops\RandomTransform.cs" />
      <Compile Include="Assets\Scripts\Games\Hoops\RandomWallofPoints.cs" />
+     <Compile Include="Assets\Scripts\Games\Hoops\SimpleTriggerEnterDestroy.cs" />
      <Compile Include="Assets\Scripts\Games\Match\CardSpawner.cs" />
      <Compile Include="Assets\Scripts\Games\Match\DifficultyChoose.cs" />
      <Compile Include="Assets\Scripts\Games\Match\LookSelect.cs" />
@@ -299,7 +300,6 @@
      <Compile Include="Assets\Scripts\Menu Scripts\PaintPopUp.cs" />
      <Compile Include="Assets\Scripts\Menu Scripts\SAssessment.cs" />
      <Compile Include="Assets\Scripts\Menu Scripts\SetGameScore.cs" />
-     <Compile Include="Assets\Scripts\RandomMoveAnimations.cs" />
      <Compile Include="Assets\Scripts\SharedScripts\AnimatorEvents.cs" />
      <Compile Include="Assets\Scripts\SharedScripts\EnableOrDisableTrigger.cs" />
      <Compile Include="Assets\Scripts\SharedScripts\Extensions.cs" />
@@ -317,6 +317,7 @@
      <Compile Include="Assets\Scripts\SharedScripts\PlayerManager.cs" />
      <Compile Include="Assets\Scripts\SharedScripts\PowerUpResponse.cs" />
      <Compile Include="Assets\Scripts\SharedScripts\RandomiseAnimParameters.cs" />
+     <Compile Include="Assets\Scripts\SharedScripts\RandomMoveAnimations.cs" />
      <Compile Include="Assets\Scripts\SharedScripts\SceneController.cs" />
      <Compile Include="Assets\Scripts\SharedScripts\TargetMovement.cs" />
      <Compile Include="Assets\Scripts\SharedScripts\WaveController.cs" />
