--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -9,7 +9,7 @@
     <ProductVersion>10.0.20506</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <RootNamespace></RootNamespace>
-    <ProjectGuid>{49E808EC-17E4-7B82-CDD7-EE6132CD7121}</ProjectGuid>
+    <ProjectGuid>{2F6D047C-5EB6-2C94-0D85-CD1C30CDB267}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <AssemblyName>Assembly-CSharp</AssemblyName>
@@ -53,7 +53,6 @@
   <ItemGroup>
      <Compile Include="Assets\Animations\Intro\AnimationScripts\NakedManAnimBehavior.cs" />
      <Compile Include="Assets\Animations\Intro\AnimationScripts\RandomLook_AnimationBehavior.cs" />
-     <Compile Include="Assets\Delete\CreateNewGround.cs" />
      <Compile Include="Assets\GoogleVR\Demos\Scripts\DemoInputManager.cs" />
      <Compile Include="Assets\GoogleVR\Demos\Scripts\DemoSceneManager.cs" />
      <Compile Include="Assets\GoogleVR\Demos\Scripts\GVRDemo\GVRDemoManager.cs" />
@@ -545,7 +544,7 @@
  <HintPath>/opt/Unity/Editor/Data/UnityExtensions/Unity/UnityHoloLens/RuntimeEditor/UnityEngine.HoloLens.dll</HintPath>
  </Reference>
  <Reference Include="Google.ProtocolBuffers">
- <HintPath>/home/user/Desktop/copy of destressor1/Assets/Plugins/Google.ProtocolBuffers.dll</HintPath>
+ <HintPath>/home/user/Desktop/destressor1/Assets/Plugins/Google.ProtocolBuffers.dll</HintPath>
  </Reference>
  <Reference Include="UnityEngine.Advertisements">
  <HintPath>/home/user/.config/unity3d/cache/packages/packages.unity.com/com.unity.ads@0.0.16/UnityEngine.Advertisements.dll</HintPath>
