--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -312,6 +312,7 @@
      <Compile Include="Assets\Scripts\SharedScripts\ItemResponse.cs" />
      <Compile Include="Assets\Scripts\SharedScripts\ItemRotate.cs" />
      <Compile Include="Assets\Scripts\SharedScripts\NewWave.cs" />
+     <Compile Include="Assets\Scripts\SharedScripts\ObjectDisableOnEnter.cs" />
      <Compile Include="Assets\Scripts\SharedScripts\ParticleEffectReplay.cs" />
      <Compile Include="Assets\Scripts\SharedScripts\PlayerLookMove.cs" />
      <Compile Include="Assets\Scripts\SharedScripts\PlayerManager.cs" />
