--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -239,6 +239,9 @@
      <Compile Include="Assets\Scripts\Games\Collections\Enemy.cs" />
      <Compile Include="Assets\Scripts\Games\Collections\EnemyManager.cs" />
      <Compile Include="Assets\Scripts\Games\Collections\SpawnCollections.cs" />
+     <Compile Include="Assets\Scripts\Games\CopingGame\CopeGameObstacles.cs" />
+     <Compile Include="Assets\Scripts\Games\CopingGame\CopingGameSpawner.cs" />
+     <Compile Include="Assets\Scripts\Games\CopingGame\LookControlMovement.cs" />
      <Compile Include="Assets\Scripts\Games\Finder\FindChoose.cs" />
      <Compile Include="Assets\Scripts\Games\Finder\FinderSpawner.cs" />
      <Compile Include="Assets\Scripts\Games\Hit\CoinManager.cs" />
@@ -329,6 +332,7 @@
      <Compile Include="Assets\Scripts\Menu Scripts\SAssessment.cs" />
      <Compile Include="Assets\Scripts\Menu Scripts\SetGameScore.cs" />
      <Compile Include="Assets\Scripts\SharedScripts\AnimatorEvents.cs" />
+     <Compile Include="Assets\Scripts\SharedScripts\DestroyTriggerWithTag.cs" />
      <Compile Include="Assets\Scripts\SharedScripts\EnableOrDisableTrigger.cs" />
      <Compile Include="Assets\Scripts\SharedScripts\Extensions.cs" />
      <Compile Include="Assets\Scripts\SharedScripts\Flock.cs" />
