--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -314,6 +314,7 @@
      <Compile Include="Assets\Scripts\Intro\StressEffects.cs" />
      <Compile Include="Assets\Scripts\Intro\StressModifierGeneral.cs" />
      <Compile Include="Assets\Scripts\Intro\UIStressGage.cs" />
+     <Compile Include="Assets\Scripts\Menu Scripts\AudioManager.cs" />
      <Compile Include="Assets\Scripts\Menu Scripts\BaseSoundController.cs" />
      <Compile Include="Assets\Scripts\Menu Scripts\ButtonClickLook.cs" />
      <Compile Include="Assets\Scripts\Menu Scripts\CognitiveRefraimingAction.cs" />
