--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -374,6 +374,7 @@
      <Compile Include="Assets\Scripts\Menu Scripts\SetGameScore.cs" />
      <Compile Include="Assets\Scripts\Menu Scripts\SettingsControl.cs" />
      <Compile Include="Assets\Scripts\SharedScripts\AnimatorEvents.cs" />
+     <Compile Include="Assets\Scripts\SharedScripts\AudioManagerTarget.cs" />
      <Compile Include="Assets\Scripts\SharedScripts\DestroyTriggerWithTag.cs" />
      <Compile Include="Assets\Scripts\SharedScripts\EnableOrDisableTrigger.cs" />
      <Compile Include="Assets\Scripts\SharedScripts\Extensions.cs" />
