--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -323,8 +323,10 @@
      <Compile Include="Assets\Scripts\Games\SkyJumper\SkyJumperLookMovement.cs" />
      <Compile Include="Assets\Scripts\Games\TriggerGameSelection.cs" />
      <Compile Include="Assets\Scripts\Games\Wack\MoleType.cs" />
+     <Compile Include="Assets\Scripts\Games\Wack\WackBerryController.cs" />
      <Compile Include="Assets\Scripts\Games\Wack\WackGameManager.cs" />
      <Compile Include="Assets\Scripts\Games\Wack\WackLookClick.cs" />
+     <Compile Include="Assets\Scripts\Games\Wack\WackSpawner.cs" />
      <Compile Include="Assets\Scripts\Games\Wack\WackSpawnPowerUps.cs" />
      <Compile Include="Assets\Scripts\Intro\AddForceToFallingObjects.cs" />
      <Compile Include="Assets\Scripts\Intro\AwakeAnimation.cs" />
