--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -55,7 +55,6 @@
      <Compile Include="Assets\Animations\ControlAnimScripts\AnimatorEvents.cs" />
      <Compile Include="Assets\Animations\ControlAnimScripts\AwakeAnimation.cs" />
      <Compile Include="Assets\Animations\ControlAnimScripts\RandomiseAnimParameters.cs" />
-     <Compile Include="Assets\Animations\ControlAnimScripts\SwitchAnimParamOffAndOn.cs" />
      <Compile Include="Assets\Animations\Intro\AnimationScripts\NakedManAnimBehavior.cs" />
      <Compile Include="Assets\Animations\Intro\AnimationScripts\RandomLook_AnimationBehavior.cs" />
      <Compile Include="Assets\Cinemachine\Base\Runtime\Behaviours\CinemachineBrain.cs" />
@@ -126,6 +125,7 @@
      <Compile Include="Assets\DefaultPlayables\Video\VideoSchedulerPlayableBehaviour.cs" />
      <Compile Include="Assets\DefaultPlayables\Video\VideoScriptPlayableAsset.cs" />
      <Compile Include="Assets\DefaultPlayables\Video\VideoScriptPlayableTrack.cs" />
+     <Compile Include="Assets\Delete\SwitchAnimParamOffAndOn.cs" />
      <Compile Include="Assets\GoogleVR\Demos\Scripts\DemoInputManager.cs" />
      <Compile Include="Assets\GoogleVR\Demos\Scripts\DemoSceneManager.cs" />
      <Compile Include="Assets\GoogleVR\Demos\Scripts\GVRDemo\GVRDemoManager.cs" />
