--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -410,6 +410,7 @@
      <Compile Include="Assets\Scripts\SharedScripts\SceneController.cs" />
      <Compile Include="Assets\Scripts\SharedScripts\Scrollz.cs" />
      <Compile Include="Assets\Scripts\SharedScripts\SimpleLookAt.cs" />
+     <Compile Include="Assets\Scripts\SharedScripts\StallAndFollowUI.cs" />
      <Compile Include="Assets\Scripts\SharedScripts\TargetMovement.cs" />
      <Compile Include="Assets\Scripts\SharedScripts\TimeLineController.cs" />
      <Compile Include="Assets\Scripts\SharedScripts\TimeLineOnEnableHelpStop.cs" />
