--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -400,6 +400,7 @@
      <Compile Include="Assets\Scripts\SharedScripts\ItemResponse.cs" />
      <Compile Include="Assets\Scripts\SharedScripts\ItemRotate.cs" />
      <Compile Include="Assets\Scripts\SharedScripts\LineRendererGuide.cs" />
+     <Compile Include="Assets\Scripts\SharedScripts\LookMoveTo.cs" />
      <Compile Include="Assets\Scripts\SharedScripts\NewWave.cs" />
      <Compile Include="Assets\Scripts\SharedScripts\ObjectDisableOnEnter.cs" />
      <Compile Include="Assets\Scripts\SharedScripts\ParticleEffectReplay.cs" />
