--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -51,6 +51,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\Animations\AnimBehaviorScripts\EyeIKControl.cs" />
      <Compile Include="Assets\Animations\AnimBehaviorScripts\LookAtAnimBehavior.cs" />
      <Compile Include="Assets\Animations\ControlAnimScripts\AnimatorEvents.cs" />
      <Compile Include="Assets\Animations\ControlAnimScripts\AwakeAnimation.cs" />
