--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -467,6 +467,7 @@
      <None Include="Assets\PostProcessing\Resources\Shaders\GrainGen.shader" />
      <None Include="Assets\PostProcessing\Resources\Shaders\FXAA.shader" />
      <None Include="Assets\PostProcessing\Resources\Shaders\DiskKernels.cginc" />
+     <None Include="Assets\Scripts\Shaders\InwardShader.shader" />
      <None Include="Assets\PostProcessing\Resources\Shaders\DepthOfField.cginc" />
      <None Include="Assets\PostProcessing\Resources\Shaders\ScreenSpaceRaytrace.cginc" />
      <None Include="Assets\Plugins\Android\AndroidManifest-Daydream.xml" />
