--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -287,6 +287,7 @@
      <Compile Include="Assets\Scripts\Data\LocalizationManager.cs" />
      <Compile Include="Assets\Scripts\Data\LocalizedText.cs" />
      <Compile Include="Assets\Scripts\Data\OnEnableAddLocalizationText.cs" />
+     <Compile Include="Assets\Scripts\Data\WebGLEmulator.cs" />
      <Compile Include="Assets\Scripts\Games\Collections\Enemy.cs" />
      <Compile Include="Assets\Scripts\Games\Collections\EnemyManager.cs" />
      <Compile Include="Assets\Scripts\Games\Collections\SpawnCollections.cs" />
@@ -295,6 +296,7 @@
      <Compile Include="Assets\Scripts\Games\CopingGame\LookControlMovement.cs" />
      <Compile Include="Assets\Scripts\Games\Finder\FindChoose.cs" />
      <Compile Include="Assets\Scripts\Games\Finder\FinderSpawner.cs" />
+     <Compile Include="Assets\Scripts\Games\Hit\CheckAndInstantiate.cs" />
      <Compile Include="Assets\Scripts\Games\Hit\HitManager.cs" />
      <Compile Include="Assets\Scripts\Games\Hit\HitTrigger.cs" />
      <Compile Include="Assets\Scripts\Games\Hit\LookHit.cs" />
@@ -334,11 +336,11 @@
      <Compile Include="Assets\Scripts\Games\SkyJumper\SkyJumperLookMovement.cs" />
      <Compile Include="Assets\Scripts\Games\TriggerGameSelection.cs" />
      <Compile Include="Assets\Scripts\Games\Wack\MoleType.cs" />
+     <Compile Include="Assets\Scripts\Games\Wack\SpawnRandomizedPowerUps.cs" />
      <Compile Include="Assets\Scripts\Games\Wack\Wack_AnimBehavior_ReturnToInitPos.cs" />
      <Compile Include="Assets\Scripts\Games\Wack\WackGameManager.cs" />
      <Compile Include="Assets\Scripts\Games\Wack\WackLookClick.cs" />
      <Compile Include="Assets\Scripts\Games\Wack\WackSpawner.cs" />
-     <Compile Include="Assets\Scripts\Games\Wack\WackSpawnPowerUps.cs" />
      <Compile Include="Assets\Scripts\Intro\AddForceToFallingObjects.cs" />
      <Compile Include="Assets\Scripts\Intro\BicycleInteraction.cs" />
      <Compile Include="Assets\Scripts\Intro\CollectTaskInteraction.cs" />
