--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -87,6 +87,7 @@
      <Compile Include="Assets\DefaultPlayables\Video\VideoScriptPlayableAsset.cs" />
      <Compile Include="Assets\DefaultPlayables\Video\VideoScriptPlayableTrack.cs" />
      <Compile Include="Assets\Delete\InfoBubble.cs" />
+     <Compile Include="Assets\Delete\SAssessment.cs" />
      <Compile Include="Assets\Delete\SwitchAnimParamOffAndOn.cs" />
      <Compile Include="Assets\GoogleVR\Demos\Scripts\DemoInputManager.cs" />
      <Compile Include="Assets\GoogleVR\Demos\Scripts\DemoSceneManager.cs" />
@@ -242,6 +243,7 @@
      <Compile Include="Assets\PostProcessing\Runtime\Utils\MaterialFactory.cs" />
      <Compile Include="Assets\PostProcessing\Runtime\Utils\RenderTextureFactory.cs" />
      <Compile Include="Assets\PostProcessing\Utilities\CustomMotionTexture\ExampleWheelController.cs" />
+     <Compile Include="Assets\Scripts\Data\CognitiveRefraimingText.cs" />
      <Compile Include="Assets\Scripts\Data\DataManager.cs" />
      <Compile Include="Assets\Scripts\Data\LocalizationData.cs" />
      <Compile Include="Assets\Scripts\Data\LocalizationManager.cs" />
@@ -344,18 +346,19 @@
      <Compile Include="Assets\Scripts\Menu Scripts\MusicTrackName.cs" />
      <Compile Include="Assets\Scripts\Menu Scripts\OrientationAdjustment.cs" />
      <Compile Include="Assets\Scripts\Menu Scripts\PaintPopUp.cs" />
-     <Compile Include="Assets\Scripts\Menu Scripts\SAssessment.cs" />
      <Compile Include="Assets\Scripts\Menu Scripts\SetGameScore.cs" />
      <Compile Include="Assets\Scripts\Menu Scripts\SettingsControl.cs" />
      <Compile Include="Assets\Scripts\Menu Scripts\SliderButtonManipulator.cs" />
      <Compile Include="Assets\Scripts\SharedScripts\AudioManagerTarget.cs" />
      <Compile Include="Assets\Scripts\SharedScripts\DestroyTriggerWithTag.cs" />
      <Compile Include="Assets\Scripts\SharedScripts\EnableOrDisableTrigger.cs" />
+     <Compile Include="Assets\Scripts\SharedScripts\EventManager.cs" />
      <Compile Include="Assets\Scripts\SharedScripts\Extensions.cs" />
      <Compile Include="Assets\Scripts\SharedScripts\Flock.cs" />
      <Compile Include="Assets\Scripts\SharedScripts\FlockController.cs" />
      <Compile Include="Assets\Scripts\SharedScripts\GameController.cs" />
      <Compile Include="Assets\Scripts\SharedScripts\GameTimer.cs" />
+     <Compile Include="Assets\Scripts\SharedScripts\GradualFadeAndDisable.cs" />
      <Compile Include="Assets\Scripts\SharedScripts\HelpUIManager.cs" />
      <Compile Include="Assets\Scripts\SharedScripts\HitEffectDelete.cs" />
      <Compile Include="Assets\Scripts\SharedScripts\ItemRotate.cs" />
