--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -245,7 +245,9 @@
      <Compile Include="Assets\PostProcessing\Utilities\CustomMotionTexture\ExampleWheelController.cs" />
      <Compile Include="Assets\ReturnToInitialPosOnTrigger.cs" />
      <Compile Include="Assets\Scripts\Data\CognitiveRefraimingText.cs" />
+     <Compile Include="Assets\Scripts\Data\CurrentTimeToText.cs" />
      <Compile Include="Assets\Scripts\Data\DataManager.cs" />
+     <Compile Include="Assets\Scripts\Data\GazeInputModule.cs" />
      <Compile Include="Assets\Scripts\Data\LocalizationData.cs" />
      <Compile Include="Assets\Scripts\Data\LocalizationManager.cs" />
      <Compile Include="Assets\Scripts\Data\LocalizedText.cs" />
